# azure-bill-of-materials-cost-calculator

./: .env.sample  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: azure_bom.json  enterprise_prices.sample.csv
examples/retail/: retail-prices-1.json  retail-prices-10.json  retail-prices-100.json  retail-prices-101.json  retail-prices-102.json  retail-prices-103.json  retail-prices-104.json  retail-prices-105.json  retail-prices-106.json  retail-prices-107.json  retail-prices-108.json  retail-prices-109.json  retail-prices-11.json  retail-prices-110.json  retail-prices-111.json  retail-prices-112.json  retail-prices-113.json  retail-prices-114.json  retail-prices-115.json  retail-prices-116.json  retail-prices-117.json  retail-prices-118.json  retail-prices-119.json  retail-prices-12.json  retail-prices-120.json  retail-prices-121.json  retail-prices-122.json  retail-prices-123.json  retail-prices-124.json  retail-prices-125.json  retail-prices-126.json  retail-prices-127.json  retail-prices-128.json  retail-prices-129.json  retail-prices-13.json  retail-prices-130.json  retail-prices-131.json  retail-prices-132.json  retail-prices-133.json  retail-prices-134.json  (+779 more)
src/azure_bom_costing/: cli.py  handlers.py  helpers.py  price_model.py  pricing_sources.py  types.py
src/azure_bom_costing/handlers/: aks.py  api_management.py  app_insights.py  app_service.py  backup.py  blob_storage.py  cognitive_search.py  common.py  container_apps.py  data_bricks.py  data_factory.py  defender.py  dev_ops.py  dns.py  egress.py  entra_id.py  event_hubs.py  (+16 more)
(+10 files in other folders)
