[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-bom-costing"
version = "0.1.0"
description = "Azure Bill of Materials cost modeller (Retail + Enterprise)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Robert Leggett", email = "contact@robertleggett.com.au" }]
dependencies = [
    "requests>=2.32.0",
    "tabulate>=0.9.0",
    "pydantic>=2.9.0"      # for schema validation
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",         # linter/formatter
    "types-requests>=2.32.0.20240905",
    "responses>=0.25.3"    # HTTP mocking
]

[project.scripts]
azure-bom = "azure_bom_costing.cli:main"  # `azure-bom ...`

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E","F","I","N","UP","B"]